Code UI ProductDetail và phòng chống tấn công XSS

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@tailwindcss/line-clamp": "^0.4.4",
     "axios": "^1.4.0",
     "classnames": "^2.3.2",
+    "dompurify": "^3.0.5",
     "framer-motion": "^10.16.0",
     "lodash": "^4.17.21",
     "react": "^18.2.0",
@@ -26,6 +27,7 @@
     "yup": "^1.2.0"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/lodash": "^4.14.197",
     "@types/node": "^20.5.0",
     "@types/react": "^18.2.15",
